1.3.2 - TBD
    * Added Stereographic projection mode
    * The launcher now remembers Java options changed in the launch settings
    * More descriptive error message when failing to open a texture pack

1.3.1 - 2014-09-01
    * Fixed bug in the .hdr texture loader that crashed all render threads

1.3 - 2014-08-31
    * Attempted to make PNG writing more efficient by splitting PNGs into
      1 MiB chunks.
    * Removed the "render lock/auto lock" features. These are replaced
      by a render reset confirmation dialog which appears if anything that
      would reset the render has been changed after rendering for at least
      thirty seconds.
    * Added Red Sandstone blocks, slabs, and stairs (from Minecraft snapshots)
    * Fixed a problem causing render progress to reset after loading a scene
    * Clouds can now be moved in all directions
    * HDRI sky textures can now be used, supported formats are:
        + RGBE (.hdr)
        + PFM
    * Added new sky rendering modes:
        + gradient
        + spherical skymap
        + skybox
    * Added sky light parameter, affecting indirect sky lighting contribution
    * The simulated sky has been modified (less pink, more bright)
    * Enable "Clear Selection" button after selecting region
    * Fixed regular glass blocks not letting light pass through (since 1.2.0).
      This could also affect other transparent blocks where the transparent
      texels had dark RGB values.

1.2.3 - 2014-07-13
    * Added Minecraft 1.8 blocks:
        + Coarse Dirt
        + Prismarine (rough, block, dark)
        + Sea Lantern
        + Wet Sponge
        + Iron Trapdoor
        + Slime Block
    * Improved the 2D map:
        + More zoom levels
        + Mouse wheel scrolling zooms, Ctrl+Scroll changes layer
        + Fixed tearing issues
        + Improved performance for large map views
        + The name of the biome under the cursor is now displayed in lower-left
          corner of the map